--- a/BlogEngine/BlogEngine.Client/_Imports.razor
+++ b/BlogEngine/BlogEngine.Client/_Imports.razor
@@ -12,6 +12,7 @@
 @using Syncfusion.Blazor.Buttons
 @using Syncfusion.Blazor.RichTextEditor
 @using Syncfusion.Blazor.Popups
+@using Syncfusion.Blazor.DropDowns
 @using BlogEngine.ClientServices.Services.Implementations
 @using BlogEngine.ClientServices.Services.Abstractions
 @using BlogEngine.ClientServices.Extensions
