Added sorting and filtering functionality to blog posts

--- a/BlogEngine/BlogEngine.Client/Shared/Navigation.razor
+++ b/BlogEngine/BlogEngine.Client/Shared/Navigation.razor
@@ -14,7 +14,7 @@
                     <a class="nav-link" href="blog/create">Create Blog</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Filter Blogs</a>
+                    <a class="nav-link" href="blog/search">Search Blogs</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="blog/manage">Manage Blogs</a>
