--- a/BlogEngine/BlogEngine.Client/_Imports.razor
+++ b/BlogEngine/BlogEngine.Client/_Imports.razor
@@ -26,3 +26,4 @@
 @using BlogEngine.Client.Shared.Notification
 @using BlogEngine.Client.Shared.Comment
 @using BlogEngine.Client.Shared.Category
+@using System.ComponentModel
