--- a/BlogEngine/BlogEngine.Client/Shared/Navigation.razor
+++ b/BlogEngine/BlogEngine.Client/Shared/Navigation.razor
@@ -38,7 +38,7 @@
                 </li>
             </ul>
             <div>
-                <a class="btn btn-outline-primary" href="#">Log in</a>
+                <a class="btn btn-outline-primary" href="account/login">Log in</a>
             </div>
         </div>
     </div>
