Added AccountClient, configured login, logout and register functionality

--- a/BlogEngine/BlogEngine.Client/Pages/Account/Register.razor
+++ b/BlogEngine/BlogEngine.Client/Pages/Account/Register.razor
@@ -1,50 +1,17 @@
 ﻿@page "/account/register"
 @layout BrandOnlyLayout
+@inject IAccountClient AccountClient
+@inject ILoginService LoginService
+@inject NavigationManager NavigationManager
 
-<style>
-    body {
-        background-color: #f7f9fb !important;
-    }
-</style>
-
-<div class="container d-flex align-items-center flex-column">
-    <form action="" class="shadow p-3 mb-5 bg-white rounded account-form">
-
-        <h3 class="mb-3">Register</h3>
-
-        <div class="mb-3">
-            <label for="first-name" class="form-label">First Name</label>
-            <input type="text" id="first-name" class="form-control">
-        </div>
-
-        <div class="mb-3">
-            <label for="last-name" class="form-label">Last Name</label>
-            <input type="text" id="last-name" class="form-control">
-        </div>
-
-        <div class="mb-3">
-            <label for="email" class="form-label">E-Mail Address</label>
-            <input type="email" id="email" class="form-control">
-        </div>
-
-        <div class="mb-3">
-            <label for="password" class="form-label">Password</label>
-            <input type="password" id="password" class="form-control">
-        </div>
-
-        <div class="mb-3">
-            <label for="repeat-password" class="form-label">Repeat Password</label>
-            <input type="password" id="repeat-password" class="form-control">
-        </div>
-
-        <button type="submit" class="btn btn-success mb-3 w-100">Register</button>
-
-        <div class="text-center">
-            <p>Already have an account? <a href="account/login" class="text-decoration-none">Login</a> </p>
-        </div>
-    </form>
-</div>
+<RegisterForm ValidSubmit="OnValidSubmit"/>
 
 @code{
+    private async Task OnValidSubmit(UserInfoDTO userInfoDTO)
+    {
+        var userTokenDTO = await AccountClient.RegisterAsync(userInfoDTO);
+        await LoginService.LoginAsync(userTokenDTO.Token);
 
+        NavigationManager.NavigateTo("");
+    }
 }
