--- a/BlogEngine/BlogEngine.Client/Pages/Category/CreateCategory.razor
+++ b/BlogEngine/BlogEngine.Client/Pages/Category/CreateCategory.razor
@@ -2,6 +2,7 @@
 @layout NavigationLayout
 @inject NavigationManager NavigationManager
 @inject ICategoryClient CategoryClient
+@attribute [Authorize]
 
 <TextCenter Text="Create Category" />
 
