--- a/BlogEngine/BlogEngine.Client/App.razor
+++ b/BlogEngine/BlogEngine.Client/App.razor
@@ -1,17 +1,7 @@
 ﻿<Router AppAssembly="@typeof(Program).Assembly">
 
     <Found Context="routeData">
-        <AuthorizeRouteView RouteData="@routeData" DefaultLayout="@typeof(MainLayout)">
-
-            <Authorizing>
-                <text>You are Authorizing...</text>
-            </Authorizing>
-
-            <NotAuthorized>
-                <text>You are Not Authorized.</text>
-            </NotAuthorized>
-
-        </AuthorizeRouteView>
+        <AuthorizeRouteView RouteData="@routeData" DefaultLayout="@typeof(MainLayout)" />
     </Found>
 
     <NotFound>
