--- a/BlogEngine/BlogEngine.Client/Pages/_Host.cshtml
+++ b/BlogEngine/BlogEngine.Client/Pages/_Host.cshtml
@@ -35,7 +35,7 @@
 </head>
 <body>
     <app>
-        <component type="typeof(App)" render-mode="ServerPrerendered" />
+        <component type="typeof(App)" render-mode="Server" />
     </app>
 
 
