--- a/BlogEngine/BlogEngine.Client/_Imports.razor
+++ b/BlogEngine/BlogEngine.Client/_Imports.razor
@@ -26,4 +26,5 @@
 @using BlogEngine.Client.Shared.Notification
 @using BlogEngine.Client.Shared.Comment
 @using BlogEngine.Client.Shared.Category
+@using BlogEngine.Client.Shared.Account
 @using System.ComponentModel
