--- a/BlogEngine/BlogEngine.Client/Shared/Account/RegisterForm.razor
+++ b/BlogEngine/BlogEngine.Client/Shared/Account/RegisterForm.razor
@@ -5,38 +5,39 @@
 </style>
 
 <div class="container d-flex align-items-center flex-column">
-    <EditForm Model="_userInfoDTO" OnValidSubmit="DataAnnotationsValidated" class="shadow p-3 mb-5 bg-white rounded account-form">
+    <EditForm Model="_userRegisterDTO" OnValidSubmit="DataAnnotationsValidated" class="shadow p-3 mb-5 bg-white rounded account-form">
         <DataAnnotationsValidator />
 
         <h3 class="mb-3">Register</h3>
 
-        @* TODO: Add missing fields to register model ! *@
         <div class="mb-3">
             <label for="first-name" class="form-label">First Name</label>
-            <input type="text" id="first-name" class="form-control">
+            <input @bind-value="_userRegisterDTO.FirstName" type="text" id="first-name" class="form-control">
+            <ValidationMessage For="(() => _userRegisterDTO.FirstName)" />
         </div>
 
         <div class="mb-3">
             <label for="last-name" class="form-label">Last Name</label>
-            <input type="text" id="last-name" class="form-control">
+            <input @bind-value="_userRegisterDTO.LastName" type="text" id="last-name" class="form-control">
+            <ValidationMessage For="(() => _userRegisterDTO.LastName)" />
         </div>
 
         <div class="mb-3">
             <label for="email" class="form-label">E-Mail Address</label>
-            <input @bind-value="_userInfoDTO.EmailAddress" type="email" id="email" class="form-control">
-            <ValidationMessage For="(() => _userInfoDTO.EmailAddress)" />
+            <input @bind-value="_userRegisterDTO.EmailAddress" type="email" id="email" class="form-control">
+            <ValidationMessage For="(() => _userRegisterDTO.EmailAddress)" />
         </div>
 
         <div class="mb-3">
             <label for="password" class="form-label">Password</label>
-            <input @bind-value="_userInfoDTO.Password" type="password" id="password" class="form-control">
-            <ValidationMessage For="(() => _userInfoDTO.Password)" />
+            <input @bind-value="_userRegisterDTO.Password" type="password" id="password" class="form-control">
+            <ValidationMessage For="(() => _userRegisterDTO.Password)" />
         </div>
 
-        @* TODO: Add missing fields to register model ! *@
         <div class="mb-3">
-            <label for="repeat-password" class="form-label">Repeat Password</label>
-            <input type="password" id="repeat-password" class="form-control">
+            <label for="confirm-password" class="form-label">Confirm Password</label>
+            <input @bind-value="_userRegisterDTO.ConfirmPassword" type="password" id="confirm-password" class="form-control">
+            <ValidationMessage For="(() => _userRegisterDTO.ConfirmPassword)" />
         </div>
 
         <button disabled="@_actionsDisabled" type="submit" class="btn btn-success mb-3 w-100">Register</button>
@@ -48,8 +49,8 @@
 </div>
 
 @code {
-    [Parameter] public EventCallback<UserInfoDTO> ValidSubmit { get; set; }
-    private UserInfoDTO _userInfoDTO = new UserInfoDTO();
+    [Parameter] public EventCallback<UserRegisterDTO> ValidSubmit { get; set; }
+    private UserRegisterDTO _userRegisterDTO = new UserRegisterDTO();
     private bool _actionsDisabled = false;
 
     private async Task DataAnnotationsValidated()
@@ -57,6 +58,6 @@
         _actionsDisabled = true;
         StateHasChanged();
 
-        await ValidSubmit.InvokeAsync(_userInfoDTO);
+        await ValidSubmit.InvokeAsync(_userRegisterDTO);
     }
 }
