--- a/BlogEngine/BlogEngine.Client/_Imports.razor
+++ b/BlogEngine/BlogEngine.Client/_Imports.razor
@@ -27,4 +27,6 @@
 @using BlogEngine.Client.Shared.Comment
 @using BlogEngine.Client.Shared.Category
 @using BlogEngine.Client.Shared.Account
+@using BlogEngine.Client.Extensions
 @using System.ComponentModel
+@using System.Security.Claims
