--- a/BlogEngine/BlogEngine.Client/_Imports.razor
+++ b/BlogEngine/BlogEngine.Client/_Imports.razor
@@ -30,3 +30,4 @@
 @using BlogEngine.Client.Extensions
 @using System.ComponentModel
 @using System.Security.Claims
+@using BlogEngine.Shared.Helpers
