--- a/BlogEngine/BlogEngine.Client/Shared/Blog/BlogArticleList.razor
+++ b/BlogEngine/BlogEngine.Client/Shared/Blog/BlogArticleList.razor
@@ -1,8 +1,6 @@
 ﻿<GenericList Collection="BlogDTOs">
     <EmptyTemplateFragment>
-        <div class="text-center">
-            <h1>Articles not available</h1>
-        </div>
+        <TextCenter Text="Articles not available" />
     </EmptyTemplateFragment>
     <WholeCollectionTemplate>
 
