--- a/BlogEngine/BlogEngine.Client/Shared/Navigation.razor
+++ b/BlogEngine/BlogEngine.Client/Shared/Navigation.razor
@@ -17,6 +17,9 @@
                     <a class="nav-link" href="blog/search">Search Blogs</a>
                 </li>
                 <li class="nav-item">
+                    <a class="nav-link" href="blog/articles">Blog Articles</a>
+                </li>
+                <li class="nav-item">
                     <a class="nav-link" href="blog/manage">Manage Blogs</a>
                 </li>
                 <li class="nav-item dropdown">
